# Bevy-Dotnet-Host-Test

./: Cargo.toml  README.md  my_bevy_game.sln
dotnet_project/: Program.cs  dotnet_project.csproj
src/: hello.rs  main.rs  sharp_plugin.rs
