[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = "0.16.1"
netcorehost = {git = "https://github.com/OpenByteDev/netcorehost.git", rev = "66357befb83ab275bf0cd04f60b26cdcc9cdbbd7", features = ["net9_0"]}

